<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DosAlarm</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create Alarm</string>
    <string name="createMincha">Mincha Reminder</string>
    <string name="delete">Delete</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="warning">Warning</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="add">Add</string>
    <string name="alarm_duration_label">Alarm Duration (sec.)</string>
    <string name="alarm_time_label">Alarm Time</string>
    <string name="alarm_date_label">Alarm Date</string>
    <string name="alarm_label_label">Alarm Label</string>
    <string name="hint_date">Select date</string>
    <string name="hint_time">Select time</string>
    <string name="hint_label">Label (optional)</string>
    <string name="todays_zmanim_short">Today\'s Zmanim</string>
    <string name="todays_zmanim">Today\'s Zmanim - %1$s</string>
    <string name="alarm_will_start">Alarm will start at:</string>
    <string name="alarm_will_start_with_label">Alarm (%1$s) will start at:</string>
    <string name="alarm_after_shma">Your alarm is after Sof Zman Shma</string>
    <string name="alarm_after_tfilah">Your alarm is after Sof Zman Tfila</string>
    <string name="sunrise">Sunrise: %1$s</string>
    <string name="dawn">Dawn: %1$s</string>
    <string name="talit_and_tefilin">Earliest Talis and Tefillin: %1$s</string>
    <string name="latest_shma_mga">Latest Shema M"A: %1$s</string>
    <string name="latest_shma_gra">Latest Shema GR"A: %1$s</string>
    <string name="latest_shacharis_mga">Latest Shacharis M"A: %1$s</string>
    <string name="latest_shacharis_gra">Latest Shachris GR"A: %1$s</string>
    <string name="midday">Midday: %1$s</string>
    <string name="minchaGedola">Mincha Gedola: %1$s</string>
    <string name="plag">Plag: %1$s</string>
    <string name="sunset">Sunset: %1$s</string>
    <string name="nightfall">Tzeit Hakochavim: %1$s</string>
    <string name="about">About</string>
    <string name="settings">settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_language_title">App Language</string>
    <string name="lang_en">English</string>
    <string name="lang_iw">Hebrew</string>
    <string name="lang_fr">French</string>
    <string name="lang_es">Spanish</string>
    <string name="not_selected">Not selected</string>

    <string name="shabbat_shalom">Shabbat Shalom</string>
    <string name="less_than_a_minute">less than a minute</string>
    <string name="one_minute">1 minute</string>
    <string name="minutes">%d minutes</string>
    <string name="one_hour">1 hour</string>
    <string name="hours">%d hours</string>
    <string name="and_minutes">and %1$d minutes</string>

    <!-- Preference Titles -->
    <string name="pref_alarm_duration_title">Default alarm duration for Shabbat(sec.)</string>
    <string name="pref_alarm_time_title">Default alarm time</string>
    <string name="pref_enable_notifications_title">Reminders enabled</string>
    <string name="defaults_header">Defaults</string>
    <string name="pref_notifications_candle_header">Shabbat Candle lighting Reminder</string>
    <string name="pref_notifications_shacharit_header">Shacharit Reminder (not including Shabbat)</string>
    <string name="pref_notifications_mincha_header">Mincha Reminder (not including Shabbat)</string>
    <string name="pref_notifications_maariv_header">Maariv Reminder (not including Shabbat)</string>
    <string name="pref_notifications_shacharit_sunrise_text">minutes before sunrise</string>
    <string name="pref_notifications_mincha_sunset_text">Minutes before sunset</string>
    <string name="pref_notifications_maariv_sunset_text">Minutes after sunset</string>
    <string name="pref_notifications_shacharit_szks_text">Minutes before Sof Zman Kryiat Sma</string>
    <string name="pref_notifications_shacharit_fixed_text">fixed time</string>
    <string name="pref_notifications_candle_minutes_text">Time before Shabbat</string>

    <!-- Preference locations -->
    <string name="pref_location_title">Your location</string>
    <string name="JLM_IL">Jerusalem</string>
    <string name="TLV_IL">Tel Aviv</string>
    <string name="HAF_IL">Haifah</string>
    <string name="KSM_IL">Kiryat Shmona</string>
    <string name="MNF_IL">Mitzpe Netofa</string>
    <string name="TVE_IL">Tiberias</string>
    <string name="GVZ_IL">Givaat Zeev</string>
    <string name="EFR_IL">Efrat</string>
    <string name="LOD_IL">Lod</string>
    <string name="MBA_IL">Mazkeret Batya</string>
    <string name="SDR_IL">Sderot</string>
    <string name="EIL_IL">Eilat</string>
    <string name="NYC_US">New York</string>
    <string name="LAX_US">Los Angeles</string>
    <string name="MIA_US">Miami</string>
    <string name="BOS_US">Boston</string>
    <string name="TOR_CA">Toronto</string>
    <string name="LON_UK">London</string>
    <string name="PAR_FR">Paris</string>

    <string name="country_israel">Israel</string>
    <string name="country_usa">USA</string>
    <string name="country_canada">Canada</string>
    <string name="country_uk">United Kingdom</string>
    <string name="country_france">France</string>

    <!-- notification -->
    <string name="notification_candle_lighting_title">Shabbat Candle-Lighting is\nin %1$s</string>
    <string name="notification_body">Don\'t forget to</string>
    <string name="ok">OK</string>

   <string name="min_5">5 min.</string>
   <string name="min_10">10 min.</string>
   <string name="min_15">15 min.</string>
   <string name="min_20">20 min.</string>
   <string name="min_25">25 min.</string>
   <string name="min_30">30 min.</string>
   <string name="min_35">45 min.</string>
   <string name="min_40">40 min.</string>
   <string name="min_45">45 min.</string>
   <string name="min_50">50 min.</string>
   <string name="min_55">55 min.</string>
   <string name="min_60">1 hour</string>
   <string name="min_75">1:15 hours</string>
   <string name="min_90">1.5 hours</string>
   <string name="min_105">1:45 hours</string>
   <string name="min_120">2 hours</string>
   <string name="min_150">2.5 hours</string>
   <string name="min_180">3 hours</string>
   <string name="min_210">3.5 hours</string>
   <string name="min_240">4 hours</string>

   <string name="notification_checklist_dosalarm">Set an alarm (DosAlarm) clock</string>
   <string name="notification_checklist_refrigerator">Set the refrigerator light</string>
   <string name="notification_checklist_dishwasher">Set the dishwasher timer</string>
   <string name="notification_checklist_electricity">Set the electricity timer</string>
   <string name="notification_checklist_air_conditioner">Set the air conditioner timer</string>
   <string name="notification_checklist_kettle">Prepare Shabbat Kettle</string>
   <string name="notification_checklist_hot_plate">Prepare Shabbat hot plate</string>
   <string name="notification_checklist_candles">Prepare the candles</string>
<!--   <string name="notification_checklist_phone">Call family to wish shabbat Shalom</string>-->

    <string name="pref_click_here_for_details">Click here to specify reminders</string>
    <string name="pref_checklist_title">In the notification remind me about:</string>
    <string name="pref_checklist_dosalarm">Alarm clock (DosAlarm)</string>
    <string name="pref_checklist_refrigerator">Refrigerator light</string>
    <string name="pref_checklist_dishwasher">Dishwasher timer</string>
    <string name="pref_checklist_electricity">Shabbat Clock</string>
    <string name="pref_checklist_air_conditioner">Air Conditioner timer</string>
    <string name="pref_checklist_kettle">Shabbat Urn</string>
    <string name="pref_checklist_hot_plate">Hot Plate</string>
    <string name="pref_checklist_candles">Shabbat Candles</string>
<!--    <string name="pref_checklist_phone">Phone my family</string>-->

    <string name="reminder_text">Reminder - don\'t forget %1$s</string>
    <string name="reminder_activity_title" translatable="false">DosAlarm - Reminder</string>
    <string name="time_icon_desc" translatable="false">Clock icon</string>
    <string name="app_icon_desc" translatable="false">App icon</string>
    <string name="shacharit_switch_desc" translatable="false">Shacharit reminder switch</string>
    <string name="mincha_switch_desc" translatable="false">Mincha reminder switch</string>
    <string name="maariv_switch_desc" translatable="false">Maariv reminder switch</string>
    <string name="candle_switch_desc" translatable="false">Candle lighting reminder switch</string>
    <string name="notification_stop_desc" translatable="false">Stop alarm</string>
    <string name="notification_snooze_desc" translatable="false">Snooze alarm</string>
    <string name="notification_collapsed_title" translatable="false">DosAlarm</string>
    <string name="remind_me_about">Remind me about:</string>
    <string name="reminders_advanced_settings">advanced settings for reminders can be found in the settings page</string>
    <string name="shacharit">Shacharit</string>
    <string name="shacharit_vatikin">Shacharit\n(Vatikin)</string>
    <string name="mincha">Mincha\n</string>
    <string name="maariv">Maariv\n</string>
    <string name="candle_lighting">Candle\nLighting</string>
    <string name="stop">Stop</string>
    <string name="snooze">Snooze</string>
    <string name="prayer_reminder_shacharit_title">Time to Pray Shacharit</string>
    <string name="prayer_reminder_shacharit_text">Wake up! It is time to pray Shacharit.\nSunrise is at %1$s \nSof Zman Kryiat Sehma (gr"a) is at %2$s</string>
    <string name="prayer_reminder_mincha_title">Time to Pray Mincha</string>
    <string name="prayer_reminder_mincha_text">Reminder - It is time to pray Mincha\nSunset is at %1$s</string>
    <string name="prayer_reminder_maariv_title">Time to Pray Maariv</string>
    <string name="prayer_reminder_maariv_text">Maariv! Don\'t fall asleep, it\'s time to pray Maariv</string>
    <string name="swipe_to_dismiss">swipe to stop</string>

    <!-- share -->
    <string name="share_msg">I\'m not sure why this will interest you, but I\'m waking up on %1$s at %2$s  with DosAlarm! \n\n\Don\'t  have yet dos-alarm? download here: https://tinyurl.com/52esu8dx</string>

</resources>