<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/defaults_header">

    <ListPreference
        app:defaultValue="JLM_IL"
        app:entryValues="@array/pref_location_values"
        app:entries="@array/pref_location_entries"
        app:key="location"
        app:title="@string/pref_location_title"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:defaultValue="90"
        app:entries="@array/pref_alarm_duration_entries"
        app:entryValues="@array/pref_alarm_duration_values"
        app:key="alarm_duration"
        app:title="@string/pref_alarm_duration_title"
        app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:key="pref_shabbat_checklist_notifications_category" app:title="@string/pref_shabbat_checklist_notifications_header">
        <SwitchPreference
            app:key="enable_pre_shabbat_checklist_notifications"
            app:title="@string/pref_enable_notifications_title"
            app:defaultValue="true">
        </SwitchPreference>
        <ListPreference
            android:key="pref_notification_time_before_shabbat"
            android:title="@string/time_beforeShabbat_notification"
            android:entries="@array/pref_notification_time_before_shabbat_entries"
            android:entryValues="@array/pref_notification_time_before_shabbat_values"
            android:defaultValue="60"
            app:useSimpleSummaryProvider="true"/>

        <MultiSelectListPreference
            app:summary="@string/pref_click_here_for_details"
            android:key="pref_pre_shabbat_notifications_checklist"
            android:title="@string/pref_checklist_title"
            android:dialogTitle="Choose options"
            android:entries="@array/pref_pre_shabbat_notification_entries"
            android:entryValues="@array/pref_pre_shabbat_notification_values"
            android:defaultValue="@array/pref_pre_shabbat_notification_values" />

    </PreferenceCategory>

</PreferenceScreen>