<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <!-- App bar -->
    <include layout="@layout/toolbar_include" />

    <!-- App Icon -->
    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/app_icon_desc" />

    <!-- Title -->
    <TextView
        android:id="@+id/alarmTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/reminder_activity_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/reminderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder_text"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

            <!-- Snooze Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/snoozeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/snooze"
                style="?android:attr/buttonBarButtonStyle"
                app:iconTint="@color/white" />

            <!-- Stop Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/stopButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:text="@string/stop"
                style="?android:attr/buttonBarButtonStyle"
                app:iconTint="@color/white" />
    </LinearLayout>
</LinearLayout>